# django-export-celery

./: .gitignore  LICENSE  README.md  setup.cfg
project/: readme.md  requirements.txt
project/polls/: admin.py  models.py
project/polls/migrations/: 0001_initial.py
project/project/: celery.py  settings.py
src/django-export-celery/: admin.py  mixins.py  models.py  statuses.py  urls.py
src/django-export-celery/migrations/: 0001_initial.py
src/django_export_celery/: __init__.py  admin.py  apps.py  forms.py  mixins.py  models.py  resources.py  tasks.py  views.py
src/django_export_celery/migrations/: 0002_auto_20220104_1450.py  0003_auto_20220104_1648.py
