[metadata]
name = django-export-celery
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrtoffou/django-export-celery
classifiers =
    Programming Language :: Python :: 3.6
    Framework :: Django :: 3.2
    Framework :: Celery
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src