[metadata]
name = django-export-celery
version = 0.1.2
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mrtoffou/django-export-celery
classifiers =
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: Django :: 3.1
    Framework :: Celery
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    django-author
    Django>=3.1
    celery
    django-import-export

[options.packages.find]
where = src